--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/Commissions/Rogue.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/Objects/Effect0.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/Objects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://escenario_inicio.tscn")
-current_scene="res://escenario_inicio.tscn"
-center_split_offset=0
-selected_bottom_panel_item=0
+open_scenes=PackedStringArray("res://escenario_inicio.tscn", "res://personaje.tscn")
+current_scene="res://personaje.tscn"
+center_split_offset=-175
+selected_bottom_panel_item=4
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://personaje.gd"]
+open_scripts=["res://personaje.gd", "res://personaje_movimiento.gd"]
 selected_script="res://personaje.gd"
-open_help=["GDScript"]
+open_help=[]
 script_split_offset=52
 list_split_offset=-14
 
