--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/Objects/Effect0.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/Objects/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes_scenes/personaje.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://script_scenes/", "res://scenes_scenes/", "res://scenes_scenes/ui/", "res://globals/", "res://assets/Objects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://escenario_inicio.tscn", "res://personaje.tscn")
-current_scene="res://personaje.tscn"
+open_scenes=PackedStringArray("res://scenes_scenes/escenario_inicio.tscn", "res://scenes_scenes/menu.tscn", "res://scenes_scenes/ui/game_menu.tscn", "res://scenes_scenes/ui/ui.tscn", "res://scenes_scenes/personaje.tscn")
+current_scene="res://scenes_scenes/personaje.tscn"
 center_split_offset=-175
-selected_bottom_panel_item=4
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://personaje.gd", "res://personaje_movimiento.gd"]
-selected_script="res://personaje.gd"
-open_help=[]
+open_scripts=["res://scenes_scenes/Camera2D.gd", "res://scenes_scenes/escenario_inicio.gd", "res://script_scenes/GameMenu.gd", "res://globals/globals.gd", "res://scenes_scenes/Menu.gd", "res://scenes_scenes/personaje.gd", "res://scenes_scenes/personaje_movimiento.gd", "res://script_scenes/ui.gd"]
+selected_script="res://scenes_scenes/personaje_movimiento.gd"
+open_help=["TextureRect"]
 script_split_offset=52
 list_split_offset=-14
 
@@ -54,6 +54,6 @@ log_filter_0=true
 log_filter_2=true
 log_filter_1=true
 log_filter_3=true
-log_filter_4=true
+log_filter_4=false
 collapse=false
 show_search=true
