--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,30 +1,114 @@
-[res://personaje.gd]
+[res://scenes_scenes/Camera2D.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 75,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 7,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 21,
-"selection_from_line": 7,
-"selection_to_column": 16,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://personaje_movimiento.gd]
+[res://scenes_scenes/escenario_inicio.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
+"row": 2,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes_scenes/Menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 63,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 5,
+"selection_to_column": 63,
+"selection_to_line": 5,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes_scenes/personaje.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 34,
+"scroll_position": 15.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes_scenes/personaje_movimiento.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://script_scenes/GameMenu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://script_scenes/ui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://globals/globals.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
