--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes_scenes/personaje.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes_scenes/", "res://assets_reales/", "res://assets_reales/character/", "res://assets_reales/character/walkL/", "res://assets_reales/character/walkfront/", "res://assets_reales/character/walkback/", "res://assets_reales/character/idleback/", "res://assets_reales/character/idle/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes_scenes/escenario_inicio.tscn", "res://scenes_scenes/menu.tscn", "res://scenes_scenes/ui/game_menu.tscn", "res://scenes_scenes/ui/ui.tscn", "res://scenes_scenes/personaje.tscn")
-current_scene="res://scenes_scenes/personaje.tscn"
+current_scene="res://scenes_scenes/escenario_inicio.tscn"
 center_split_offset=-175
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=9
 
 [ScriptEditor]
 
 open_scripts=["res://scenes_scenes/Camera2D.gd", "res://scenes_scenes/escenario_inicio.gd", "res://script_scenes/GameMenu.gd", "res://globals/globals.gd", "res://scenes_scenes/Menu.gd", "res://scenes_scenes/personaje_movimiento.gd", "res://script_scenes/ui.gd"]
-selected_script="res://scenes_scenes/personaje_movimiento.gd"
+selected_script="res://scenes_scenes/escenario_inicio.gd"
 open_help=["TextureRect"]
 script_split_offset=52
 list_split_offset=-14
